Fix droppable area background in dark mode

--- a/scss/dark.scss
+++ b/scss/dark.scss
@@ -15,6 +15,10 @@ img {
   filter: grayscale(20%) !important;
 }
 
+.demo-droppable {
+  background: #111 !important;
+}
+
 .modal-content,
 .modal-content > p,
 #progressPercent {
